2020-03-25  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 45583/0005: Test/B13whence.ztst: Add a test for bin_whence's
	symlinks resolution.

	* 45583/0004: Etc/BUGS, Src/utils.c, Test/D02glob.ztst: Fix
	segfault on resolving symlink loops

	* 45583/0003: Src/hist.c, Src/subst.c: chrealpath: Let caller
	decide how the return value should be allocated.

	* 45583/0002: Src/hist.c, Src/subst.c: chrealpath: Make symlink
	resolution optional.

	* 45583/0001: Test/D02glob.ztst: Add tests for the segfault on
	resolving a symlink loop bug (workers/45282).

	* 45590/0002 (in part): Test/B12limit.ztst: zsh/rlimits: Test
	that ulimit letters are unique.

2020-03-25  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 45601: Test/E02xtrace.ztst: fix one more return status

2020-03-22  Rin Okuyama  <rokuyama.rk@gmail.com>

	* github #51: aczsh.m4, configure.ac: Fix configure for cross
	build.

2020-03-22  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 45601: Test/E02xtrace.ztst: Fix status in new functions -T
	test.

	* 45563: Src/utils.c: %z supplies zlong for errors and warnings.

2020-03-22  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 45583/0009: README, Src/parse.c, Test/E02xtrace.ztst: Add
	end-of-options guard support to 'function -T'.

	* 45583/0008: Doc/Zsh/grammar.yo, README, Src/exec.c,
	Src/parse.c, Test/E02xtrace.ztst: Add the 'function -T' syntax.

	* 45583/0007: Config/version.mk, Src/exec.c, Src/parse.c,
	Src/text.c: WC_FUNCDEF: Add a placeholder element.

	* 45583/0006: Src/parse.c: internal: Add some comments for
	orientation. No functional change.

	* 45583/0005: Src/parse.c: internal: Document the WC_FUNCDEF
	data layout for anonymous functions with arguments (follow-up
	to 29492)

	* 45583/0004: Src/parse.c, Src/zsh.h: internal: Add some comments
	around wordcodes. No functional change.

	* 45583/0003: Src/parse.c, Src/zsh.h: internal: Add some comments
	around Eccstr. No functional change.

	* 45583/0002: Src/parse.c: internal: Reduce some variables'