@@ -1,5 +1,7 @@
 2020-03-25  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
+	* 45583/0006: Src/utils.c: Don't use xsymlinks() in 'whence -s'.
+
 	* 45583/0005: Test/B13whence.ztst: Add a test for bin_whence's
 	symlinks resolution.
 
